--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
                 <p>Please fill in the details to sign up</p>
             </div>
 
-            <form id="signupForm" class="signup-form" action="signupbackend.php" method="POST">
+            <form id="signupForm" class="signup-form" action="login.html" method="POST">
                 <div class="row">
                     <div class="col-md-6 form-group">
                         <div class="input-group">
@@ -101,7 +101,7 @@
         </div>
     </div>
 
-    <!-- <script>
+    <script>
         document.getElementById('signupForm').addEventListener('submit', function(e) {
             e.preventDefault(); // Prevent default form submission
             
@@ -116,7 +116,7 @@
                 }, 1000); // 1 second delay
             }
         });
-        </script> -->
+        </script>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
