--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!--Custom CSS-->
     <link rel="stylesheet" href="CSS/styles.css" type="text/css">
 
+    <link rel="stylesheet" href="CSS/all.css" type="text/css">
+
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +29,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">CONTACTS</a>
@@ -186,5 +188,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="JS/scripts.js"></script>
+    <script src="js/all.js"></script>
+
 </body>
 </html>
